--- a/dynamic NN.vcxproj
+++ b/dynamic NN.vcxproj
@@ -132,9 +132,7 @@
     <ClInclude Include="NeuralNetwork.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="complex_function_data.txt" />
-    <Text Include="data.txt" />
-    <Text Include="polynomial_data.txt" />
+    <Text Include="complex_function_data" />
   </ItemGroup>
   <ItemGroup>
     <None Include="-2X+8" />
