--- a/dynamic NN.vcxproj
+++ b/dynamic NN.vcxproj
@@ -136,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="-2X+8" />
+    <None Include=".gitignore" />
     <None Include="2X^3+X^2-3X+2" />
     <None Include="X^2" />
     <None Include="X^3" />
