--- a/dynamic NN.vcxproj.filters
+++ b/dynamic NN.vcxproj.filters
@@ -41,5 +41,6 @@
     <None Include="X^3" />
     <None Include="-2X+8" />
     <None Include="2X^3+X^2-3X+2" />
+    <None Include=".gitignore" />
   </ItemGroup>
 </Project>
